# pitgun

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
apps/pitgun-cli/: Cargo.toml
apps/pitgun-cli/scenarios/: racing-demo-v1.json
apps/pitgun-cli/src/: main.rs  replay.rs
apps/pitgun-cli/src/demo/: bundle.rs  mod.rs  racing.rs
apps/pitgun-cli/tests/: racing_demo.rs
apps/pitgun-replay/: Cargo.toml
apps/pitgun-replay/src/: main.rs
crates/pitgun-cli/: Cargo.toml
crates/pitgun-cli/src/: main.rs  manifest.rs  sinks.rs  source_udp.rs  traits.rs  types.rs
crates/pitgun-contract/: Cargo.toml
crates/pitgun-contract/examples/: verify_sim.rs
crates/pitgun-contract/src/: bundle.rs  codec.rs  determinism.rs  frame.rs  lib.rs  metrics.rs  racing.rs  registry.rs  run.rs  source.rs
crates/pitgun-contract/tests/: determinism_cross_runtime.rs  racing_schema_compatibility.rs
crates/pitgun-contract/tests/fixtures/: racing_contract_v1.json
crates/pitgun-core/: Cargo.toml
crates/pitgun-core/benches/: formula_processor_bench.rs
crates/pitgun-core/examples/: observed_segment_aggregation.rs
crates/pitgun-core/src/: builder.rs  converter.rs  io.rs  lib.rs  pipeline.rs  segment.rs  telemetry_aggregate.rs  types.rs
crates/pitgun-core/src/formula/: ast.rs  eval.rs  mod.rs  processor.rs
crates/pitgun-core/tests/: segment_stream.rs
crates/pitgun-racing-contract/: Cargo.toml
crates/pitgun-racing-contract/examples/: verify_sim.rs
crates/pitgun-racing-contract/src/: authority.rs  lib.rs  race.rs
crates/pitgun-racing-contract/tests/: racing_schema_compatibility.rs
crates/pitgun-racing-simulator/: Cargo.toml  README.md
crates/pitgun-racing-simulator/src/: evidence.rs  lib.rs  workload.rs
crates/pitgun-runtime/: Cargo.toml
crates/pitgun-runtime/src/: lib.rs  rng.rs  verification.rs  workload.rs
crates/pitgun-runtime/tests/: linked_workload.rs  rng_v1.rs  run_bundle_verification.rs
crates/pitgun-simulator/: Cargo.toml  README.md  build.rs
crates/pitgun-simulator/data/aero/: active.json  basic.json  none.json
crates/pitgun-simulator/data/chassis/: default.json  f1_2026.json
crates/pitgun-simulator/data/circuits/: austin.json  baku.json  barcelona.json  budapest.json  default.json  jeddah.json  las_vegas.json  lusail.json  madrid.json  melbourne.json  mexico.json  miami.json  monaco.json  montreal.json  monza.json  sakhir.json  sao_paulo.json  shanghai.json  silverstone.json  singapore.json  spa.json  spielberg.json  suzuka.json  yas_marina.json  zandvoort.json
crates/pitgun-simulator/data/drivers/: aggressive.json  balanced.json  battery_voltas.json  charles_leclair.json  conservative.json  daniel_enchantier.json  default.json  franz_hermann.json  goat_tifi.json  isa_kadjar.json  luis_amilton.json  pedro_gaseoso.json  smooth_operator.json
crates/pitgun-simulator/data/engines/: v10_1990.json  v6t.json  v6t_hybrid.json  v8_1960.json  v8_1970.json  v8_2000.json
crates/pitgun-simulator/data/tires/: hard.json  medium.json  soft.json
crates/pitgun-simulator/data/vehicles/: classic_v10_1990.json  classic_v6t_1980.json  classic_v8_1960.json  classic_v8_1970.json  classic_v8_2000.json  default.json  f1_2026.json  modern_v6t.json
crates/pitgun-simulator/src/: catalog.rs  data.rs  drivers.rs  errors.rs  lib.rs  models.rs  profiles.rs  provider.rs  racing.rs  runtime.rs  simulator.rs  state.rs  telemetry.rs  tuning.rs
crates/pitgun-solver/: Cargo.toml  build.rs
crates/pitgun-solver/examples/: wasm-smoke.mjs
crates/pitgun-solver/src/: evidence.rs  kernel.rs  lib.rs  rng.rs
crates/pitgun-solver/tests/: racing_golden.rs  rng_v1.rs
crates/pitgun-solver/tests/golden/: README.md  python_monza_f1_2026_default.json  racing_run_v1.contract.json  racing_run_v1.digests.json  racing_run_v1.expected.json  racing_run_v1.input.json  racing_run_v1.output.json  racing_run_v1.telemetry-summary.json
crates/pitgun-source-kafka/: Cargo.toml
crates/pitgun-source-kafka/src/: lib.rs
crates/pitgun-source-mqtt/: Cargo.toml
crates/pitgun-source-mqtt/src/: lib.rs
crates/pitgun-source-physics/: Cargo.toml
crates/pitgun-source-physics/examples/: print_batches.rs  run_from_contract.rs
crates/pitgun-source-physics/src/: async_source.rs  lib.rs
crates/pitgun-source-udp/: Cargo.toml
crates/pitgun-source-udp/src/: async_source.rs  lib.rs
crates/pitgun-source-ws/: Cargo.toml
crates/pitgun-source-ws/src/: async_source.rs  lib.rs
docs/: DETERMINISTIC_RUN_CONTRACT_V1.md  EXAMPLES.md  FRAMEWORK_BOUNDARIES.md  HYBRID_ENERGY_MODEL_V0.md  LINKED_WORKLOAD.md  QUICKSTART.md  RACING_CONTRACT_INVENTORY.md  RACING_DEMO_CLI_V1.md  RELEASING.md  RNG_V1.md  RUN_BUNDLE_V1.md  RUN_BUNDLE_VERIFICATION.md  SOLVER_SIMULATOR_BOUNDARY.md  WIRE_FORMATS.md  architecture.md  commands.md  first-emulator.md  index.md  insight_contract.md  journal.md  segment_aggregation.md  sim_dictionary.md
examples/: kafka_stream.rs  mqtt_iot.rs  multi_source.rs  udp_ecubridge.rs  websocket_game.rs
manifests/: dummy-pitgun.yaml  manifest_formula.yaml  omega_engine.json  suspension_load.yaml
policies/: gametuning.v1.yaml  tuning.v1.yaml
portal/: .htaccess  docs.html  index.html  index2.html
schemas/: .htaccess  README.md  index.html  index.json
scripts/: plot_channel.py  pre-commit-checks.sh  recv_pitgun.py  sync-simulator-data.sh  validate-schemas.py
services/: README.md
services/pitgun-authority/: Cargo.toml  README.md
services/pitgun-authority/src/: main.rs
services/pitgun-gateway/: Cargo.toml  README.md
services/pitgun-gateway/docs/: event-model.md  roadmap.md
services/pitgun-gateway/examples/: pitwall.session_configured.json  purchase.order_completed.json  session.end.json  session.start.json  telemetry.sample_batch.json
services/pitgun-gateway/src/: insight_ingress.rs  insight_requests.rs  insight_responses.rs  insight_stats_plan.rs  llm_core.rs  main.rs  model.rs  proto.rs  questdb.rs  run_registry.rs  storage.rs
(+99 files in other folders)
