[workspace]
members = [
    "crates/*",
    "apps/*",
    "services/*",
]
default-members = [
    "crates/pitgun-core",
    "crates/pitgun-codec-udp",
    "crates/pitgun-source-udp",
    "crates/pitgun-codec-json",
    "crates/pitgun-source-ws",
    "crates/pitgun-emulator",
    "apps/pitgun-cli",
]
resolver = "2"

[workspace.package]
edition = "2025"
authors = ["Loïc Bélec <contact@loicbelec.com>"]
license = "MIT"
