[package]
name = "pitgun-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { version = "1", default-features = true, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
pitgun-codec-udp = { path = "../../crates/pitgun-codec-udp" }
pitgun-core = { path = "../../crates/pitgun-core" }
pitgun-source-udp = { path = "../../crates/pitgun-source-udp" }
pitgun-source-ws = { path = "../../crates/pitgun-source-ws" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
