[package]
name = "pitgun-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { version = "1", default-features = true, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
tokio = { version = "1.40", features = ["rt-multi-thread","macros","net","sync","time"] }
futures-core = "0.3"
futures-util = "0.3"
async-trait = { version = "0.1", default-features = true }
pitgun-core = { path = "../pitgun-core" }
socket2 = "0.5"