[package]
name = "pitgun-contract"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
pitgun-signing = { path = "../pitgun-signing" }
