[package]
name = "pitgun-contract"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3.2"
serde-value = "0.7"
serde_yaml = "0.9"
semver = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["sync"] }
unicode-normalization = "0.1"
uuid = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
