[package]
name = "pitgun-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
csv = "1.3"
serde_json = "1.0"

[[bench]]
name = "formula_processor_bench"
harness = false
