[package]
name = "pitgun-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Core telemetry pipeline for Pitgun multi-source architecture"

[dependencies]
pitgun-contract = { path = "../pitgun-contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
csv = "1.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "formula_processor_bench"
harness = false
