[package]
name = "pitgun-racing-contract"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
hex = "0.4"
pitgun-signing = { path = "../pitgun-signing" }
serde_json_canonicalizer = "0.3.2"
sha2 = "0.10"
wasm-bindgen-test = "0.3"
