[package]
name = "pitgun-simulator"
version = "0.1.0"
edition = "2024"

[features]
default = ["json-files"]
json-files = []
wasm = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
pitgun-contract = { path = "../pitgun-contract" }
pitgun-racing-simulator = { path = "../pitgun-racing-simulator" }
pitgun-racing-solver = { path = "../pitgun-racing-solver" }
pitgun-runtime = { path = "../pitgun-runtime" }

[dev-dependencies]
tempfile = "3"
