[package]
name = "pitgun-solver"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pitgun-contract = { path = "../pitgun-contract" }
pitgun-policy = { path = "../pitgun-policy" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
md-5 = "0.10.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
