[package]
name = "pitgun-solver"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pitgun-contract = { path = "../pitgun-contract" }
pitgun-racing-contract = { path = "../pitgun-racing-contract" }
pitgun-racing-policy = { path = "../pitgun-racing-policy" }
pitgun-racing-solver = { path = "../pitgun-racing-solver" }
pitgun-runtime = { path = "../pitgun-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
