[package]
name = "pitgun-solver"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pitgun-racing-simulator = { path = "../pitgun-racing-simulator" }
pitgun-runtime = { path = "../pitgun-runtime" }
wasm-bindgen = "0.2"

[dev-dependencies]
pitgun-contract = { path = "../pitgun-contract" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-test = "0.3"
