[package]
name = "pitgun-source-mqtt"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "MQTT telemetry source for Pitgun multi-source architecture"

[dependencies]
pitgun-contract = { path = "../pitgun-contract" }
rumqttc = "0.24"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
