[package]
name = "pitgun-source-physics"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Physics simulation telemetry source for Pitgun"

[dependencies]
pitgun-core = { path = "../pitgun-core" }
pitgun-contract = { path = "../pitgun-contract" }
pitgun-signing = { path = "../pitgun-signing" }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros"] }
