[package]
name = "pitgun-source-ws"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "WebSocket telemetry source for Pitgun multi-source architecture"

[dependencies]
pitgun-core = { path = "../pitgun-core" }
pitgun-codec-json = { path = "../pitgun-codec-json" }
pitgun-contract = { path = "../pitgun-contract" }
tungstenite = "0.21"
tokio-tungstenite = "0.21"
tokio = { version = "1", features = ["net", "sync", "time", "macros"] }
async-trait = "0.1"
url = "2"
futures-util = "0.3"
