[package]
name = "pitgun-authority"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
axum = "0.7"
hex = "0.4"
pitgun-codec-json = { path = "../../crates/pitgun-codec-json" }
pitgun-contract = { path = "../../crates/pitgun-contract" }
pitgun-policy = { path = "../../crates/pitgun-policy" }
pitgun-signing = { path = "../../crates/pitgun-signing" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
