[package]
name = "pitgun-gateway"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
pitgun-contract = { path = "../../crates/pitgun-contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "time", "uuid", "json"] }
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
